# conda-pypi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.md  conda pip install  config.yaml  environment.yml  packages.pickle  pixi.toml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  docs.yml  pypi.yml  qa-wheels.yml  sphinx.yml  test.yml  tests.yml
conda_pip/: cli.py  dependencies.py  main.py  plugin.py  utils.py
conda_pip/data/: EXTERNALLY-MANAGED
conda_pip/dependencies/: __init__.py  grayskull.py  pip.py
conda_pupa/: __main__.py  build.py  cli.py  conda_build_utils.py  convert_tree.py  create.py  dependencies.py  dependencies_subprocess.py  downloader.py  editable.py  installer.py  paths.py  plugin.py  synth.py  translate.py
conda_pupae/: build.py  dist_repodata.py  editable.py  translate.py
conda_pypi/: __init__.py  __main__.py  auth.py  build.py  builder.py  cli.py  conda_build_utils.py  constants.py  convert_tree.py  core.py  dependencies.py  dependencies_subprocess.py  downloader.py  exceptions.py  grayskull_pypi_mapping.json  index.py  installer.py  main.py  mapping.py  plugin.py  pupa_cli.py  pupa_main.py  pypi_cli.py  pypi_main.py  python_paths.py  repo_generator.py  solver.py  synth.py  translate.py  utils.py  vcs.py  whl.py
conda_pypi/cli/: __init__.py  convert.py  install.py  list.py  main.py  pip.py  pypi.py
conda_pypi/data/: EXTERNALLY-MANAGED
conda_pypi/dependencies/: __init__.py  grayskull.py  pip.py  pupa.py  pypi.py
conda_pypi/package_extractor/: __init__.py  __intit__.py  extract_whl.py
conda_pypi/plugins/: plugin.py
conda_pypi/plugins/pre_command/: plugin.py
conda_pypi/post_command/: __init__.py  install.py
conda_pypi/pre_command/: __init__.py  extract_whl.py  extract_whl_or_tarball.py  patched_load.py  plugin.py
conda_pypi_backup/: plugin.py  python_paths.py
conda_pypi_backup/cli/: list.py  pip.py
conda_pypi_backup/data/: EXTERNALLY-MANAGED
conda_pypi_backup/dependencies/: pip.py
dev2conda/: build.py  conda_build_utils.py  dist_repodata.py  editable.py  tarconda.py
docs/: architecture.md  conf.py  developer-notes.md  features.md  index.md  modules.md  motivation-and-vision.md  name-mapping-roadmap.md  quickstart.md  robots.txt  why.md
docs/_static/css/: custom.css
docs/developer/: architecture.md  index.md
docs/developer/testing/: index.md  mock-channel-server.md
docs/motivation-and-vision/: addressing-these-issues-with-conda-pypi.md  existing-strategies.md  index.md  key-differences-between-conda-and-pypi.md
docs/reference/: cli-reference.md  conda-channels-naming-analysis.md  troubleshooting.md
docs/reference/commands/: convert.rst  index.rst  install.rst
docs/why/: conda-channels-naming-analysis.md  conda-vs-pypi.md  existing-strategies.md  index.md  potential-solutions.md
recipe/: meta.yaml
tests/: conftest.py  corpus.py  http_test_server.py  metadata_to_repodata.py  test_auth.py  test_benchmarks.py  test_build.py  test_cli.py  test_conda_create.py  test_conda_local_channel.py  test_conda_meta_json_filename.py  test_convert.py  test_convert_many.py  test_convert_tree.py  test_downloader.py  test_editable.py  test_editable_install.py  test_install.py  test_installer_data_files.py  test_main.py  test_multiple.py  test_plugins.py  test_python_paths.py  test_qa_wheels.py  test_repodata.py  test_synth.py  test_tarconda.py  test_utils.py  test_validate.py
tests/cli/: test_convert.py  test_install.py
tests/conda_local_channel/: README.md  channeldata.json  generate_index.py  generate_noarch_wheel_repodata.py  index.html  provision_conda_packages.py  provision_wheels.py  wheel_packages.txt
tests/conda_local_channel/linux-64/: _libgcc_mutex-0.1-conda_forge.tar.bz2  _openmp_mutex-4.5-2_gnu.tar.bz2  bzip2-1.0.8-hd590300_5.conda  ca-certificates-2025.11.12-hbd8a1cb_0.conda  ld_impl_linux-64-2.40-hf3520f5_7.conda  libexpat-2.6.2-h59595ed_0.conda  libffi-3.4.2-h7f98852_5.tar.bz2  libgcc-14.2.0-h77fa898_1.conda  libgcc-ng-14.2.0-h69a702a_1.conda  libgomp-14.2.0-h77fa898_1.conda  libnsl-2.0.1-hd590300_0.conda  libsqlite-3.46.0-hde9e2c9_0.conda  libuuid-2.38.1-h0b41bf4_0.conda  libxcrypt-4.4.36-hd590300_1.conda  libzlib-1.3.1-h4ab18f5_1.conda  ncurses-6.5-h59595ed_0.conda  openssl-3.3.1-h4ab18f5_1.conda  pip-25.3-pyh8b19718_0.conda  python-3.12.4-h194c7f8_0_cpython.conda  readline-8.2-h8c095d6_2.conda  repodata.json  repodata.json.zst  setuptools-80.9.0-pyhff2d567_0.conda  tk-8.6.13-noxft_h4845f30_101.conda  tzdata-2025b-h78e105d_0.conda  wheel-0.45.1-pyhd8ed1ab_1.conda  xz-5.2.6-h166bdaf_0.tar.bz2
tests/conda_local_channel/noarch/: abqpy-2023.7.10-py3-none-any.whl  annotated_types-0.7.0-py3-none-any.whl  anyio-4.9.0-py3-none-any.whl  fastapi-0.116.1-py3-none-any.whl  idna-3.10-py3-none-any.whl  index.html  pydantic-2.11.7-py3-none-any.whl  pydantic_core-2.33.2-cp313-cp313-macosx_11_0_arm64.whl  repodata.json  repodata.json.copy  repodata.json.zst  repodata_from_packages.json  repodata_from_packages.json.zst  requests-2.32.5-py3-none-any.whl  run_exports.json  run_exports.json.zst  setuptools-78.1.1-py3-none-any.whl  sniffio-1.3.1-py3-none-any.whl  starlette-0.47.2-py3-none-any.whl  typing_extensions-4.14.1-py3-none-any.whl  typing_inspection-0.4.1-py3-none-any.whl  wheel-0.45.1-py3-none-any.whl
tests/conda_local_channel/osx-arm64/: bzip2-1.0.8-hd037594_8.conda  ca-certificates-2025.11.12-hbd8a1cb_0.conda  libexpat-2.7.3-haf25636_0.conda  libffi-3.5.2-he5f378a_0.conda  liblzma-5.8.1-h39f12f2_2.conda  libsqlite-3.51.1-h9a5124b_0.conda  libzlib-1.3.1-h8359307_2.conda  ncurses-6.5-h5e97a16_3.conda  openssl-3.6.0-h5503f6c_0.conda  pip-25.3-pyh8b19718_0.conda  python-3.12.12-h18782d2_1_cpython.conda  readline-8.2-h1d1bf99_2.conda  repodata.json  repodata.json.zst  setuptools-80.9.0-pyhff2d567_0.conda  tk-8.6.13-h892fb3f_3.conda  tzdata-2025b-h78e105d_0.conda  wheel-0.45.1-pyhd8ed1ab_1.conda
tests/pypi_local_index/: generate_index.py  index.html
tests/pypi_local_index/demo-package/: demo_package-0.1.0-py3-none-any.whl  (+1 more)
