[tool.black]
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
authors = [{ name = "Daniel Holth", email = "dholth@gmail.com" }]
name = "conda_pupa"
description = "Convert Python packages to .conda"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "build",                           # conda name is python-build
  "conda-index",
  "conda-libmamba-solver >=24.9",
  "conda-package-streaming >=0.11",
  "installer >=0.7",                 # conda name is python-installer
  "packaging >=24",
  "unearth>=0.17.2",                 # download packages from pypi
]

[project.optional-dependencies]
test = ["pytest >=7", "pytest-cov", "pytest-mock", "pypi-simple"]
docs = ["furo", "sphinx", "myst-parser", "mdit-py-plugins>=0.3.0"]

[project.entry-points.conda]
pupa = "conda_pupa.plugin"

[project.urls]
Home = "https://github.com/dholth/conda_pupa"
Documentation = "https://dholth.github.io/conda_pupa/"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
source = ["conda_pupa/", "tests/"]
omit = ["conda_pupa/create.py"]    # vendored
